// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Inventory Page should match snapshot when authenticated 1`] = `
<div>
  <div
    data-testid="assets-list"
  >
    Assets List Component
  </div>
</div>
`;

exports[`Inventory Page should match snapshot when loading 1`] = `
<div>
  <div
    data-testid="loading"
  >
    Loading...
  </div>
</div>
`;

exports[`Inventory Page should match snapshot when unauthenticated 1`] = `
<div>
  <div
    data-testid="unauthorized"
  >
    Unauthorized
  </div>
</div>
`;
